--- a/resources/scss/card_product.scss
+++ b/resources/scss/card_product.scss
@@ -1,7 +1,7 @@
-.card_prdoucts {
+.card_products {
     padding: 0;
     margin: 0;
-    & .card_prdouct {
+    & .card_product {
 
         border-radius: 10px;
         padding: 0;
@@ -169,7 +169,7 @@
             z-index: 1;
             transition: 0.2s ease-in-out;
            
-            & .card_prdouct-managment {
+            & .card_product-managment {
                 display: block;
             }
             
