--- a/resources/scss/color.scss
+++ b/resources/scss/color.scss
@@ -35,9 +35,11 @@ $lk_gray:#a8acb0;
     --status_success:#2F9E44;
     --gray2:#9c9ba3;
     --white-gray:#9C9BAA;
+    --ccc-gray:#ccc;
     --content:#f7f8f9;
     --white-gold:#F6E05E;
     --border-form:#c0c2c6;
     --danger:rgb(220, 20, 60);
+    --work:rgb(25,103,210);
     --link-color:#{$lk_gray};
 }
