--- a/resources/scss/admin/app.scss
+++ b/resources/scss/admin/app.scss
@@ -1,3 +1,5 @@
+
+
 .cke_notifications_area { display: none; }
 ul,li {
     list-style: none;
@@ -70,4 +72,24 @@ ul,li {
         content: '-';
     }
     
+}
+input[readonly] {
+    background-color: #F3F3F3 !important;
+    color: black !important;
+}
+.resusltInput {
+    border-radius: 10px;
+    font-size: 16px;
+    overflow: auto;
+    height: 200px;
+    border: 1px solid #a8acb0;
+    & ul {
+        padding: 0;
+        & li {
+            cursor: pointer;
+            &:hover {
+                background-color: #DFE2E6;
+            }
+        }
+    }
 }
