--- a/resources/scss/color.scss
+++ b/resources/scss/color.scss
@@ -42,4 +42,5 @@ $lk_gray:#a8acb0;
     --danger:rgb(220, 20, 60);
     --work:rgb(25,103,210);
     --link-color:#{$lk_gray};
+    --hover-search:#E2EFDD;
 }
