--- a/resources/scss/show_product.scss
+++ b/resources/scss/show_product.scss
@@ -47,8 +47,8 @@
     &-img {
         @media (min-width: 768px) {
             position: relative;
-            width: 550px;
-            height: 550px;
+            /*width: 550px;*/
+            /*height: 550px;*/
             cursor: pointer;
             margin: 0 auto;
             padding-top: 30px;
