--- a/resources/scss/show_product.scss
+++ b/resources/scss/show_product.scss
@@ -47,7 +47,7 @@
     &-img {
         @media (min-width: 768px) {
             position: relative;
-            /*width: 550px;*/
+            width: 550px;
             /*height: 550px;*/
             cursor: pointer;
             margin: 0 auto;
@@ -122,6 +122,17 @@
         line-height: 27px;
         font-size: 14px;
         font-weight: 500;
+    }
+    &-oldprice {
+        font-size: 20px;
+        font-weight: 600;
+
+        color: var(--danger);
+        text-decoration: line-through;
+        
+        & span {
+            color: var(--main_gray);
+        }
     }
     &-price {
         font-size: 25px;
