--- a/resources/scss/orders.scss
+++ b/resources/scss/orders.scss
@@ -15,6 +15,7 @@
         font-size: 16px;
         overflow: auto;
         height: 200px;
+        width: 90%;
         border: 1px solid var(--fill-icon);
         & ul {
             padding: 0;
