Add block catalog in index

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -153,6 +153,8 @@ $theme-colors:map-merge($theme-colors,$custom-color);
 @import 'validation.scss';
 @import 'stock.scss';
 @import 'mob-search.scss';
+@import 'main_menu.scss';
+
 
 
 .footer {
